fix(a11y/addPeople) enhance screen reader ux in add people dialog
- added a screen reader only text for the copy button, that allows
screen reader users to know about the actual url if needed. Before that,
they could only get "copy meeting url", not the actual url if necessary
since the text changes on focus
- use a normal button for the copy number, to get all benefits of the
button tag for free. This adds a useful class 'invisible-button' to
quickly reset styles on a "visually custom" button

--- a/css/_utils.scss
+++ b/css/_utils.scss
@@ -41,3 +41,17 @@
     display: -webkit-flex !important;
     display: flex !important;
 }
+
+/**
+ * resets default button styles,
+ * mostly intended to be used on interactive elements that
+ * differ from their default styles (e.g. <a>) or have custom styles
+ */
+.invisible-button {
+    background: none;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    font: inherit;
+    padding: 0;
+}
